fix 招生日程的Title & add 活動日程的scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -149,3 +149,23 @@ html {
 
   }
 }
+
+
+
+.custom-scrollbar::-webkit-scrollbar {
+  height: 8px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: rgba(153, 153, 153, 1);
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
